@@ -1,4 +1,5 @@
 Mon 21 Jan 2019 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add -c (--with-count) option
 	* Fix make coverage (only for unit tests for lib)
 	* Add initial implementation of overlap function
 
